--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/schedule_data
+    url: jdbc:mysql://localhost:3306/scheduler_homework
     username: root
     password: 210812
     driver-class-name: com.mysql.cj.jdbc.Driver
